Fix address bug

--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<script defer src="/static/js/script.js"></script>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="/static/css/style.css" />
+	<script defer src="./static/js/script.js"></script>
 
-		<title>Star Wars</title>
-	</head>
+	<link rel="stylesheet" href="./static/css/style.css" />
 
-	<body>
-		<div class="menupage">
-			<div class="playbtn">Play</div>
-		</div>
+	<title>Star Wars</title>
+</head>
 
-		<div class="cursor">
-			<img src="/static/img/aim_PNG62.png" />
-		</div>
+<body>
+	<div class="menupage">
+		<div class="playbtn">Play</div>
+	</div>
 
-		<div class="targetbox" draggable="false">
-			<img class="target" src="/static/img/starwars_PNG47.png" />
-			<img class="explosion" src="/static/img/explosion_PNG15401.png" />
-		</div>
+	<div class="cursor">
+		<img src="./static/img/aim_PNG62.png" />
+	</div>
 
-		<div class="score"></div>
+	<div class="targetbox" draggable="false">
+		<img class="target" src="./static/img/starwars_PNG47.png" />
+		<img class="explosion" src="./static/img/explosion_PNG15401.png" />
+	</div>
 
-		<div class="timer"></div>
+	<div class="score"></div>
 
-		<audio src="/static/sound/damage.wav" class="damage"></audio>
-		<audio src="/static/sound/shoot.wav" class="shoot"></audio>
+	<div class="timer"></div>
 
-		<div class="highscore">HighScore 0</div>
-	</body>
+	<audio src="./static/sound/damage.wav" class="damage"></audio>
+	<audio src="./static/sound/shoot.wav" class="shoot"></audio>
+
+	<div class="highscore">HighScore 0</div>
+</body>
+
 </html>
